devops/demo/frontend-deploy.yaml
# frontend-deploy.yaml
#
# !!! Please make sure the target folder in Worker Node exists !!!
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dp
  labels:
    app: frontend
    tier: frontend
  annotations:
    kubernetes.io/change-cause: "Release Version 0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
    matchExpressions:
      - {key: tier, operator: In, values: [frontend]}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend
        tier: frontend
    spec:
      containers:
      - name: frontend-container
        image: chriswei/frontend:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          hostPort: 80
          protocol: TCP
