devops/demo/nginx-demo-port.yaml

#----------- nginx-demo.yaml ----------------#
# http://<node-ip>

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo-dp
  labels:
    app: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      name: nginx-demo-pod
      labels:
        app: nginx-demo
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - name: nginx-demo-container
        image: nginx:1.17.6-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          hostPort: 80
          protocol: TCP
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
