devops/demo/secret-comsumber-pod.yaml
# secret-consumer-pod.yaml
# kubectl logs secret-env-pod
# kubectl exec secret-env-pod env | grep PGPASSWORD

apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  restartPolicy: Never
  containers:
  - name: secret-env-container
    image: busybox
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh"]
    args: ["-c", "env | grep PGPASSWORD"]
