devops/demo/dbpg.yaml
# !!! Please make sure the target folder in Worker Node exists !!!

# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbpg-dp
  labels:
    app: postgres
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
    matchExpressions:
      - {key: tier, operator: In, values: [database]}
  template:
    metadata:
      name: dbpg-pod
      labels:
        app: postgres
        tier: database
    spec:
      containers:
      - name: pg-container
        image: postgres:12.1-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          hostPort: 5432
          protocol: TCP
        volumeMounts:
        - name: initdb
          mountPath: "/docker-entrypoint-initdb.d"
        - name: data
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: initdb
        hostPath:
          path: "/root/projects/dockerimages/database/docker-entrypoint-initdb.d"
      - name: data
        hostPath:   
          path: "/root/projects/dockerimages/database/data"

# ------------------- ClusterIP Service ------------------- #
---
apiVersion: v1
kind: Service
metadata:
  name: dbpg
  labels:
    app: postgres
    tier: database
spec:
  selector:
    app: postgres
    tier: database
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
